# ml-experiment-scaffold

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  environment.yml  model_card.md  paper.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: base.yaml  grpo.yaml  orpo.yaml  sft.yaml  tabular.yaml  vision.yaml
ds_configs/: zero2_offload.json  zero3_offload.json
notebooks/: explore.ipynb
scripts/: compare.py  run_seeds.py  validate_data.py
src/: __init__.py  callbacks.py  config.py  data.py  eval.py  models.py  platform.py  registry.py  rewards.py  train.py  vram.py
tests/: test_compare.py  test_config.py  test_data.py  test_registry.py  test_rewards.py
